Country Homepage Font-size and alignment Issue

--- a/stories/Templates/CountryHomepage/countryhomepage.scss
+++ b/stories/Templates/CountryHomepage/countryhomepage.scss
@@ -12,12 +12,18 @@
     }
 
     .hero-container {
-      margin-top: 7.188rem;
-      padding-bottom: 3.125rem;
+      margin-top: 4.375em;
+      padding-bottom: 1.875rem;
+      padding-top: 1.875rem;
+
+      @include devicebreak(medium) {
+        margin-top: 7.188rem;
+        padding-bottom: 3.125rem;
+        padding-top: 4.375rem;
+      }
 
       .small-heading {
         margin-bottom: $spacing-24;
-        padding-left: 0;
 
         @include devicebreak(medium) {
           padding-left: $spacing-64;
@@ -25,18 +31,28 @@
       }
 
       h1 {
-        font-size: $spacing-40;
-        font-weight: 700;
+        font-size: 1.8rem;
 
         @include devicebreak(medium) {
-          font-size: $spacing-48;
+          font-size: $spacing-64;
+        }
+      }
+
+      .hero-option {
+        @include devicebreak(small) {
+           border-left: 2rem solid $color-gray-300;
+           padding-left: calc(8.33333% + 1.5rem / 2);
         }
       }
     }
 
     .featured-card-container {
       margin-bottom: $spacing-24;
-      margin-top: $spacing-24;
+      margin-top: 7.5rem;
+
+      @include devicebreak(medium) {
+        margin-top: $spacing-24;
+      }
     }
 
     .wide-card-heading {
@@ -85,6 +101,15 @@
 
       @include devicebreak(medium) {
         padding-right: $spacing-64;
+      }
+    }
+
+    .hero-option {
+      @include devicebreak(small) {
+        border-left: none;
+        padding-left: 0;
+        border-right: 2rem solid $color-gray-300;
+        padding-right: calc(8.33333% + 1.5rem / 2);
       }
     }
   }
